CONTEXT FIX, AUCTION AND USER PAGES
 - Fixed bug with losing component state even though context got neccessary info.

 - Updated users controlles: now users have separate crud for personal account.

 - Changed style of login/register.

 - Added basic pages with auction and user info by Id.
