# src/AuctionApp.Application/App/Users/Responses/CurrentUserDto.cs
@@ -1,7 +1,9 @@
 ﻿namespace Application.App.Users.Responses;
-public class UserDto
+public class CurrentUserDto
 {
     public int Id { get; set; }
 
     public required string UserName { get; set; }
+
+    public decimal Balance { get; set; }
 }
